Fixing a bug with the resize pluggin that was causing the main area of the editor to jump up and be above the toolbar in IE 7.  I filed a ticket:
https://trac.wymeditor.org/trac/ticket/168

--- a/pysapp/static/js/wymeditor/skins/pysapp/skin.css
+++ b/pysapp/static/js/wymeditor/skins/pysapp/skin.css
@@ -141,6 +141,22 @@
 .wym_classes {
     margin-left: 5px;
 }
+
 .wym_tools {
     clear: left;
+}
+
+/*FIX THE MAIN BLOCK COMMING UP AND OVER THE TOOLBAR IN IE7*/
+/* the "*:first-child+html" is a hack that targets IE7 only */
+*:first-child+html .wym_box {
+    position: relative;
+    padding-top: 0px;
+}
+*:first-child+html .wym_area_top {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+*:first-child+html .wym_area_main {
+    margin-top: 60px;
 }
